src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AuthorizedSigner__c</fullName>
        <description>Contains the name of the person signing on behalf of someone</description>
        <inlineHelpText>Contains the name of the person signing on behalf of someone</inlineHelpText>
        <label>Authorized Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateSigned__c</fullName>
        <description>This field represents when an officer has signed with Docusign</description>
        <inlineHelpText>Date when the officer has signed a docusign document</inlineHelpText>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocusignName__c</fullName>
        <description>This field represents the name of showing against the docusign signature.</description>
        <inlineHelpText>This field represents the name of showing against the docusign signature.</inlineHelpText>
        <label>Docusign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPresenterTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>is Presenter? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPresenter__c</fullName>
        <formula>if(IsPresenterTEXT__c == &quot;true&quot;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Presenter? (F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middlenames__c</fullName>
        <description>This field describe middlenames of an officer</description>
        <inlineHelpText>Middle names of the officer</inlineHelpText>
        <label>Middlenames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <label>Recipient Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecipientStatus__c</fullName>
        <label>Recipient Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hasInputBehalfDetailsTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>This field will notify to the behalf input details page if the director has been cover or not.</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD, BACK END FIELD</inlineHelpText>
        <label>has input behalf signatory details? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasInputBehalfDetails__c</fullName>
        <formula>IF( hasInputBehalfDetailsTEXT__c == &quot;true&quot; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>has input behalf signatory details? (F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCorporateDirectorTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>is Corporate Director? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCorporateDirector__c</fullName>
        <formula>if( isCorporateDirectorTEXT__c == &quot;true&quot; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Corporate Director? (F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPowerOfAttorneyTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>is Power Of Attorney? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPowerOfAttorney__c</fullName>
        <formula>if( isPowerOfAttorneyTEXT__c  == &quot;true&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Power Of Attorney? (F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSignatoryBehalfTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>is Signatory on behalf? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSignatoryBehalf__c</fullName>
        <formula>if(isSignatoryBehalfTEXT__c == &quot;true&quot;, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Signatory on behalf? (F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSignatoryTEXT__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>is Signatory? (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSignatory__c</fullName>
        <formula>if(isSignatoryTEXT__c == &quot;true&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Signatory? (F)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>